# canal-dredger

./: Cargo.toml  README.md
res/andymangold/: cube-sample.json  cube.json  history-sample-2.json  history-sample-page-2.json  history-sample-page-3.json  history-sample.json
res/scryfall/: MIGRATION_INFO.md  manual-migrations.json  mh2-migrations.json
res/soskgy/: cube.json  history.json
src/: lib.rs
src/cubecobra/: ingest.rs  mod.rs  output.rs  transform.rs
src/ingest/: cubecobra.rs  mod.rs
src/local/: ingest.rs
src/scryfall/: ingest.rs
