[package]
name = "canal-dredger"
version = "0.1.1"
edition = "2021"

[dependencies]
cubecobra_client = { path = "../mtgql-js/models/clients/cubecobra-rs"}
mtgql = { path = "../mtgql-js/models/clients/rust" }

csv = "1.3.0"
chrono = "0.4.38"
git2 = "0.19.0"
reqwest =  { version = "0.12.5", features = ["blocking"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"